Fix Rate component alignment

--- a/src/app/17-exercise/rate-version2/rate-version2.component.scss
+++ b/src/app/17-exercise/rate-version2/rate-version2.component.scss
@@ -16,3 +16,10 @@
 .selected.hover {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'  fill='orange' stroke='orangered' viewBox='0 0 24 24'%3E%3Cpath d='M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z' /%3E%3C/svg%3E");
 }
+
+.container {
+  border-radius: 20px;
+  justify-content: center;
+  font-size: 5rem;
+  padding: 30px;
+}
